Custom name resolver and moved all files to api dir
